// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateMarkdown should generate markdown with all fields populated 1`] = `
{
  "content": "---
title: Test component
tabs: true
status: Experimental
statusDate: January 2023
excerpt: "This is a brief description."
lede: "This is a brief description."
githuburl: https://github.com/ministryofjustice/moj-frontend/discussions/9999
contributorName: Test User
contributorTeam: undefined
---

{% tabs "paginate" %}
{% tab "Overview" %}

<div class="img-container">
  <img src="/assets/images/component.jpg" alt="Test component" />
</div>

## Overview
This is an overview.

### How the component is currently used

This is how it is used.

### Contribute to this component
You can help develop this component by adding information to the [Test component Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Designs" %}

## Designs

A Figma link was not included when this component was added.

      There may be more information in the [Test component Github discussion]({{ githuburl }}). You can also view the component image in the overview.

## Contribute a Figma link

      If you have a Figma link for this component (or a component like it) you can add it to [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Accessibility" %}

## Accessibility

Accessibility findings have been added for this component. There may be more findings in the [Test component Github discussion]({{ githuburl }}).


### External audit

* Conducted by: External Org
* Date: 1 January 2022

#### Audit findings

Some issues discovered.
### Internal review

* By: Internal Org
* Date: 2 February 2022

#### Review findings

Some internal issues discovered.
### Assistive Technology testing

Date: 3 March 2022

#### Testing details

Assistive tech issues discovered.

## Contribute accessibility findings

    If you have accessibility findings that are relevant to this component you can add them to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Code" %}

## Code

Code has been added for this component. There may be other code blocks in the [Test component Github discussion]({{ githuburl }}).


### Code block 1: html

<div class="app-example__code" data-module="app-copy">

\`\`\`html
{% raw %}
<p>hello!</p>
{% endraw %}
\`\`\`

</div>




## Contribute code for this component

If you have code that is relevant to this component you can add it to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% endtabs %}
",
  "filename": "Test-component.md",
}
`;

exports[`generateMarkdown should handle missing details gracefully 1`] = `
{
  "content": "---
title: Unknown-component
tabs: true
status: Experimental
statusDate: January 2023
excerpt: ""
lede: ""
githuburl: https://github.com/ministryofjustice/moj-frontend/discussions/9999
contributorName: undefined
contributorTeam: undefined
---

{% tabs "paginate" %}
{% tab "Overview" %}

<div class="img-container">
  <img src="/undefined" alt="unknown-component" />
</div>

## Overview


### How the component is currently used



### Contribute to this component
You can help develop this component by adding information to the [unknown-component Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Designs" %}

## Designs

A Figma link was not included when this component was added.

      There may be more information in the [unknown-component Github discussion]({{ githuburl }}). You can also view the component image in the overview.

## Contribute a Figma link

      If you have a Figma link for this component (or a component like it) you can add it to [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Accessibility" %}

## Accessibility

Accessibility findings have been added for this component. There may be more findings in the [unknown-component Github discussion]({{ githuburl }}).


### External audit

* Conducted by: undefined
* Date: null

#### Audit findings

undefined
### Internal review

* By: undefined
* Date: null

#### Review findings

undefined
### Assistive Technology testing

Date: null

#### Testing details

undefined

## Contribute accessibility findings

    If you have accessibility findings that are relevant to this component you can add them to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Code" %}

## Code

Code has been added for this component. There may be other code blocks in the [unknown-component Github discussion]({{ githuburl }}).


### Code block 1: undefined

<div class="app-example__code" data-module="app-copy">

\`\`\`
{% raw %}

{% endraw %}
\`\`\`

</div>




## Contribute code for this component

If you have code that is relevant to this component you can add it to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% endtabs %}
",
  "filename": "Unknown-component.md",
}
`;

exports[`generateMarkdown should handle missing image data gracefully 1`] = `
{
  "content": "---
title: Another component
tabs: true
status: Experimental
statusDate: January 2023
excerpt: "Another brief description."
lede: "Another brief description."
githuburl: https://github.com/ministryofjustice/moj-frontend/discussions/9999
contributorName: Another User
contributorTeam: undefined
---

{% tabs "paginate" %}
{% tab "Overview" %}

<div class="img-container">
  <img src="/undefined" alt="Another component" />
</div>

## Overview
Another overview.

### How the component is currently used

Another usage.

### Contribute to this component
You can help develop this component by adding information to the [Another component Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Designs" %}

## Designs

A Figma link was not included when this component was added.

      There may be more information in the [Another component Github discussion]({{ githuburl }}). You can also view the component image in the overview.

## Contribute a Figma link

      If you have a Figma link for this component (or a component like it) you can add it to [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Accessibility" %}

## Accessibility

Accessibility findings have been added for this component. There may be more findings in the [Another component Github discussion]({{ githuburl }}).


### External audit

* Conducted by: External Org
* Date: 1 January 2022

#### Audit findings

Some issues discovered.
### Internal review

* By: Internal Org
* Date: 2 February 2022

#### Review findings

Some internal issues discovered.
### Assistive Technology testing

Date: 3 March 2022

#### Testing details

Assistive tech issues discovered.

## Contribute accessibility findings

    If you have accessibility findings that are relevant to this component you can add them to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Code" %}

## Code

Code has been added for this component. There may be other code blocks in the [Another component Github discussion]({{ githuburl }}).


### Code block 1: html

<div class="app-example__code" data-module="app-copy">

\`\`\`html
{% raw %}
<p>hello!</p>
{% endraw %}
\`\`\`

</div>




## Contribute code for this component

If you have code that is relevant to this component you can add it to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% endtabs %}
",
  "filename": "Another-component.md",
}
`;

exports[`generateMarkdown should return minimal markdown if no valid data is provided 1`] = `
{
  "content": "---
title: Unknown-component
tabs: true
status: Experimental
statusDate: January 2023
excerpt: ""
lede: ""
githuburl: https://github.com/ministryofjustice/moj-frontend/discussions/9999
contributorName: undefined
contributorTeam: undefined
---

{% tabs "paginate" %}
{% tab "Overview" %}

<div class="img-container">
  <img src="/undefined" alt="unknown-component" />
</div>

## Overview


### How the component is currently used



### Contribute to this component
You can help develop this component by adding information to the [unknown-component Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Designs" %}

## Designs

A Figma link was not included when this component was added.

      There may be more information in the [unknown-component Github discussion]({{ githuburl }}). You can also view the component image in the overview.

## Contribute a Figma link

      If you have a Figma link for this component (or a component like it) you can add it to [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Accessibility" %}

## Accessibility

Accessibility findings have been added for this component. There may be more findings in the [unknown-component Github discussion]({{ githuburl }}).


### External audit

* Conducted by: undefined
* Date: null

#### Audit findings

undefined
### Internal review

* By: undefined
* Date: null

#### Review findings

undefined
### Assistive Technology testing

Date: null

#### Testing details

undefined

## Contribute accessibility findings

    If you have accessibility findings that are relevant to this component you can add them to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Code" %}

## Code

Code has been added for this component. There may be other code blocks in the [unknown-component Github discussion]({{ githuburl }}).


### Code block 1: undefined

<div class="app-example__code" data-module="app-copy">

\`\`\`
{% raw %}

{% endraw %}
\`\`\`

</div>




## Contribute code for this component

If you have code that is relevant to this component you can add it to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% endtabs %}
",
  "filename": "Unknown-component.md",
}
`;

exports[`generateMarkdown should sanitize the filename correctly 1`] = `
{
  "content": "---
title: Component! with@ special#chars
tabs: true
status: Experimental
statusDate: January 2023
excerpt: "Brief description here."
lede: "Brief description here."
githuburl: https://github.com/ministryofjustice/moj-frontend/discussions/9999
contributorName: Special User
contributorTeam: undefined
---

{% tabs "paginate" %}
{% tab "Overview" %}

<div class="img-container">
  <img src="/undefined" alt="Component! with@ special#chars" />
</div>

## Overview
Overview here.

### How the component is currently used

Usage here.

### Contribute to this component
You can help develop this component by adding information to the [Component! with@ special#chars Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Designs" %}

## Designs

A Figma link was not included when this component was added.

      There may be more information in the [Component! with@ special#chars Github discussion]({{ githuburl }}). You can also view the component image in the overview.

## Contribute a Figma link

      If you have a Figma link for this component (or a component like it) you can add it to [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Accessibility" %}

## Accessibility

Accessibility findings have been added for this component. There may be more findings in the [Component! with@ special#chars Github discussion]({{ githuburl }}).


### External audit

* Conducted by: External Org
* Date: 1 January 2022

#### Audit findings

Some issues discovered.
### Internal review

* By: Internal Org
* Date: 2 February 2022

#### Review findings

Some internal issues discovered.
### Assistive Technology testing

Date: 3 March 2022

#### Testing details

Assistive tech issues discovered.

## Contribute accessibility findings

    If you have accessibility findings that are relevant to this component you can add them to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% tab "Code" %}

## Code

Code has been added for this component. There may be other code blocks in the [Component! with@ special#chars Github discussion]({{ githuburl }}).


### Code block 1: html

<div class="app-example__code" data-module="app-copy">

\`\`\`html
{% raw %}
<p>hello!</p>
{% endraw %}
\`\`\`

</div>




## Contribute code for this component

If you have code that is relevant to this component you can add it to the [Github discussion]({{ githuburl }}). This helps other people to use it in their service.

{% endtab %}

{% endtabs %}
",
  "filename": "Component-with-special-chars.md",
}
`;
